[metadata]
name = ya.resourcepool
version = attr: ya.resourcepool.__version__
description = Resource management for Python objects
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE
url = https://github.com/knowikow/ya.resourcepool.py
classifiers  =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest
    pytest-cov
    flake8
    flake8-annotations
    flake8-comprehensions
    flake8-docstrings
    flake8-isort
    flake8-noqa
    flake8-raise
    flake8-typing-imports
dev =
    mutmut

[tool:pytest]
# addopts = --cov=src

[flake8]
max-line-length = 100
docstring-convention=google

[mutmut]
paths_to_mutate=src/
tests_dir=tests/

[tox:tox]
envlist = py38

[testenv]
usedevelop = true
whitelist_externals = rm
extras =
    dev
    testing
commands_pre =
    rm -f .mutmut-cache
commands =
    flake8
    pytest
    mutmut run

# vim:et sw=4 ts=4
